<resources>
    <string name="app_name">RFID PDA</string>
    <string name="title_login">仓储管理系统</string>
    <string name="text_user_name">用户名：</string>
    <string name="text_password">密　码：</string>
    <string name="text_login">登录</string>
    <string name="company_name"> </string>
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="action_user">用户</string>
    <string name="action_setting">设置</string>
    <string name="action_logout">退出</string>
    <string name="action_home">首页</string>
    <string name="action_task">任务</string>
    <string name="name_query_activity">货品查询</string>
    <string name="sku_query_activity">sku查询详情</string>
    <string name="hint_incode">扫描店内码</string>
    <string name="text_commit">提交</string>
    <string name="text_no_scan">未扫描</string>
    <string name="text_handle_log">操作记录</string>
    <string name="text_log_title_number">序号</string>
    <string name="text_log_title_time">时间</string>
    <string name="text_log_title_type">操作类型</string>
    <string name="text_log_title_person">操作人</string>
    <string name="text_scan_voice">扫描声音</string>
    <string name="text_scan_viberate">扫描震动</string>
    <string name="text_tally_down">理货-货品下架</string>
    <string name="text_tally">理货</string>
    <string name="text_clear_product">清空</string>
    <string name="text_down_product">下架</string>
    <string name="text_already_scan">已扫描</string>
    <string name="text_check_detail">查看明细</string>
    <string name="text_tally_detail">理货-货品明细</string>
    <string name="text_incode">店内码</string>
    <string name="text_shelf_number">货架号</string>
    <string name="text_state">状态</string>
    <string name="text_tally_up">理货-货品上架</string>
    <string name="hint_scan_shelf">扫描货架号</string>
    <string name="text_cur_shelf">当前货架号</string>
    <string name="text_task_id">任务单号：</string>
    <string name="text_up_product">上架</string>

    <string-array name="home_function_name_array">
        <item>到货签收</item>
        <item>一扫</item>
        <item>入库质检</item>
        <item>上架</item>
        <item>理货</item>
        <item>拣货出库</item>
        <item>分拣</item>
        <item>货品查询</item>
        <item>动态盘点</item>
        <item>任务</item>
        <item>RFID</item>
    </string-array>

    <integer-array name="home_function_enable_index_array">
        <item>4</item>
        <item>5</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </integer-array>
    <string name="title_activity_task">任务单</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="text_number">序号</string>
    <string name="text_task_type">任务类型</string>
    <string name="text_create_time">创建时间</string>
    <string name="text_no_content">无内容</string>
    <string name="text_inventory">动态盘点</string>
    <string name="text_finish_inventory">完成盘点,记录差异</string>
    <string name="text_inventory_detail">盘点明细</string>
    <string name="text_collect_picking_list">领取拣货单</string>
    <string name="text_collect">领取</string>
    <string name="text_picking_detail">拣货详情</string>
    <string name="hint_scan_shelf_or_incode">扫描货架号或店内码</string>
    <string name="text_please_scan">请扫描</string>
    <string name="text_picking_preview">预览拣货单</string>

    //上架
    <string name="text_grounding">上架</string>
    <string name="text_receive_grounding_task">领取上架任务</string>
    <string name="text_scan_incode">扫描店内码</string>
    <string name="text_scan_bar_code">扫描条形码</string>
    <string name="text_scan_shelf_code">扫描货架号</string>
    <string name="text_bar_code">条形码</string>
    <string name="text_shelf_code">货架号</string>
    //数据采集
    <string name="text_data_collect">数据采集</string>
    //打印机
    <string name="text_printer">配置打印机</string>
    <string name="text_print">打印价签</string>
    <string name="connectprintersuccess">打印机连接成功</string>
    <string name="connectprinterfailed">打印机连接失败</string>


    <!-- RFID -->
    <string name="version">Version:</string>
    <string name="dmin">Dmin:</string>
    <string name="band">Band:</string>
    <string name="dmax">Dmax:</string>
    <string name="power">Power:</string>
    <string name="scantime">ScanTime:</string>
    <string-array name="men_select">
        <item>PWD</item>
        <item>EPC</item>
        <item>TID</item>
        <item>USER</item>
    </string-array>
    <string name="open_warning">You must open the device before your oprate!</string>
    <string name="wordptr_empty_warning">WordPtr can not be empty!</string>
    <string name="length_empty_warning">Length can not be empty!</string>
    <string name="pwd_empty_warning">Password can not be empty!</string>
    <string name="content_empty_warning">Write data need content not be empty!</string>
    <string name="length_content_warning">Length and content does not match!</string>
    <string name="str_lenght_odd_warning">Length of every data can not be odd!</string>
    <string name="data_ilegal">Data illegal!(empty or length is odd?)</string>
    <string-array name="Fre_select">
        <item>902.75 MHz</item>
        <item>903.25 MHz</item>
        <item>903.75 MHz</item>
        <item>904.25 MHz</item>
        <item>904.75 MHz</item>
        <item>905.25 MHz</item>
        <item>905.75 MHz</item>
        <item>906.25 MHz</item>
        <item>906.75 MHz</item>
        <item>907.25 MHz</item>
        <item>907.75 MHz</item>
        <item>908.25 MHz</item>
        <item>908.75 MHz</item>
        <item>909.25 MHz</item>
        <item>909.75 MHz</item>
        <item>910.25 MHz</item>
        <item>910.75 MHz</item>
        <item>911.25 MHz</item>
        <item>911.75 MHz</item>
        <item>912.25 MHz</item>
        <item>912.75 MHz</item>
        <item>913.25 MHz</item>
        <item>913.75 MHz</item>
        <item>914.25 MHz</item>
        <item>914.75 MHz</item>
        <item>915.25 MHz</item>
        <item>915.75 MHz</item>
        <item>916.25 MHz</item>
        <item>916.75 MHz</item>
        <item>917.25 MHz</item>
        <item>917.75 MHz</item>
        <item>918.25 MHz</item>
        <item>918.75 MHz</item>
        <item>919.25 MHz</item>
        <item>919.75 MHz</item>
        <item>920.25 MHz</item>
        <item>920.75 MHz</item>
        <item>921.25 MHz</item>
        <item>921.75 MHz</item>
        <item>922.25 MHz</item>
        <item>922.75 MHz</item>
        <item>923.25 MHz</item>
        <item>923.75 MHz</item>
        <item>924.25 MHz</item>
        <item>924.75 MHz</item>
        <item>925.25 MHz</item>
        <item>925.75 MHz</item>
        <item>926.25 MHz</item>
        <item>926.75 MHz</item>
        <item>927.25 MHz</item>
    </string-array>
    <string-array name="Power_select">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
    </string-array>

    <string name="materialName">物料名称</string>
    <string name="materialType">物料类型</string>
    <string name="materialCode">编号</string>
    <string name="batchNum">批号</string>
    <string name="SerialNumber">流水号</string>
    <string name="sacnTray">扫托盘</string>
    <string name="scanStock">扫库位</string>
    <string name="scan">扫物料</string>
    <string name="confirm">确定</string>
    <string name="delete">删除</string>
    <string name="documentNo">单据号</string>
    <string name="incomingMaterial">入库</string>
    <string name="outMaterial">出库</string>
    <string name="noDocumentNo">请输入单据号</string>
    <string-array name="RFIDTitle">
        <item>设置</item>
        <item>扫描</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- 主页-->
    <string name="home_text_query">查询</string>
    <string name="home_text_tally">理货</string>
    <string name="home_text_inventory">盘点</string>
    <string name="home_test_sign">调拨签收</string>
    <string name="home_text_storage">入库</string>
    <string name="home_text_pick">拣货</string>
    <string name="home_text_task">任务</string>
    <string name="spinner_item_box_code">箱号</string>
    <string name="spinner_item_allocation_code">调拨单</string>
    <string name="spinner_item_in_code">店内码</string>
</resources>
