<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/ll_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_number"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_middle"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/text_task_type"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_middle"/>

        <TextView
            android:id="@+id/tv_time_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/text_create_time"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_middle"/>
    </LinearLayout>

    <View
        android:id="@+id/view_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <com.bigoffs.rfid.ui.view.PagedListView
        android:id="@+id/lv_task"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none"></com.bigoffs.rfid.ui.view.PagedListView>

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/text_no_content"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/text_large"
        android:visibility="gone">

    </TextView>

</LinearLayout>
