<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ll_ed"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical">

        <Spinner
            android:id="@+id/sp_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:background="@null"></Spinner>
        <EditText
            android:id="@+id/et_incode"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:hint="@string/hint_incode"
            android:textSize="@dimen/text_middle"
            android:background="@drawable/edit_common"
            android:padding="5dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_commit"
            android:minWidth="0dp"
            android:minHeight="0dp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_result"
        android:layout_below="@+id/ll_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">
        <TextView
            android:id="@+id/tv_incode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/text_no_scan"
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text=""
            android:textColor="@android:color/darker_gray"
            android:textSize="@dimen/text_huge"
            android:textStyle="bold"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_printer"
            android:textColor="@android:color/black"
            android:background="#D6D7D7"
            android:layout_marginRight="20dp"/>
        <Button
            android:id="@+id/btn_print"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_print"
            android:textColor="@android:color/black"
            android:background="#D6D7D7"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_print"
        android:layout_below="@+id/ll_result">
        <RelativeLayout
            android:id="@+id/rl_log"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:layout_marginBottom="10dp">



        </RelativeLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/ll_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/ll_print"
        android:layout_below="@+id/ll_result"
        android:orientation="vertical"
        android:background="@drawable/bg_border"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:padding="1dp"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:background="#999999">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_incode"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_middle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_shelf_code"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_middle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="残次状态"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_middle"/>

        </LinearLayout>

        <ListView
            android:id="@+id/lv_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:scrollbars="none"
            ></ListView>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_scan"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:text="开启"
        android:textSize="16dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_circle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"/>

</RelativeLayout>